services/hestia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hestia
  namespace: microservices
  labels:
    app: hestia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hestia
  template:
    metadata:
      labels:
        app: hestia
    spec:
      serviceAccountName: hestia
      containers:
      - name: hestia
        image: ghcr.io/vimalmenon/micro-army/hestia:1f63bf2
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
