services/hestia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hestia
  namespace: microservices
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: hestia.homelab.local
      http:
        paths:
          - backend:
              service:
                name: hestia
                port:
                  number: 8000
            path: /
            pathType: Prefix
    - host: hestia.completeautomate.com
      http:
        paths:
          - backend:
              service:
                name: hestia
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hestia.homelab.local
        - hestia.completeautomate.com
